# matrices_mult

./: CMakeLists.txt  main.cpp  main2.cpp
